@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/libcdr
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libcdr/ChangeLog,v 1.16 2012/10/05 15:06:42 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libcdr/ChangeLog,v 1.17 2012/10/24 15:00:24 scarabeus Exp $
+
+  24 Oct 2012; Tomáš Chvátal <scarabeus@gentoo.org> -libcdr-0.0.8.ebuild,
+  libcdr-0.0.9.ebuild:
+  Stable latest version. Remove older.
 
 *libcdr-0.0.9 (05 Oct 2012)
 
